Made sure all parse tree nodes are consistent with the antlr with the pre-conditions